--- a/anomaly-detection-cyber-security.ipynb
+++ b/anomaly-detection-cyber-security.ipynb
@@ -1,17 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NSL-KDD Dataset\n",
+    "\n",
+    "Downloaded from https://github.com/jmnwong/NSL-KDD-Dataset/blob/master/KDDTrain%2B.txt\n",
+    "\n",
+    "Here are short definitions for the attack types in the NSL-KDD dataset:\n",
+    "\n",
+    "- **DoS (Denial of Service):** Attacks aimed at making a network service unavailable by overwhelming it with traffic (e.g., Smurf, Neptune).\n",
+    "- **Probe:** Scanning or reconnaissance attacks to gather information about a target system or network (e.g., Nmap, Portsweep).\n",
+    "- **R2L (Remote to Local):** Attacks where the attacker tries to gain unauthorized access to a system remotely (e.g., Guess_passwd, Ftp_write).\n",
+    "- **U2R (User to Root):** Attacks where the attacker tries to escalate privileges on a system (e.g., Buffer_overflow, Loadmodule).\n",
+    "- **Normal:** Legitimate network activity with no malicious behavior.\n",
+    "\n",
+    "These categories represent the types of attacks in the dataset used for intrusion detection research."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hr/m5cwtmkx5s91gb3q4lx7vnr80000gn/T/ipykernel_43299/139670438.py:29: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+      "/var/folders/hr/m5cwtmkx5s91gb3q4lx7vnr80000gn/T/ipykernel_43299/3695168105.py:15: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
       "  train_data = pd.read_csv(\"./data/nsl-kdd-dataset/KDDTrain+.txt\", header=None, names=columns, index_col=False)\n",
-      "/var/folders/hr/m5cwtmkx5s91gb3q4lx7vnr80000gn/T/ipykernel_43299/139670438.py:30: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+      "/var/folders/hr/m5cwtmkx5s91gb3q4lx7vnr80000gn/T/ipykernel_43299/3695168105.py:16: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
       "  test_data = pd.read_csv(\"./data/nsl-kdd-dataset/KDDTest+.txt\", header=None, names=columns, index_col=False)\n"
      ]
     },
@@ -231,7 +250,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,20 +269,6 @@
     "# Download the dataset from https://github.com/jmnwong/NSL-KDD-Dataset/blob/master/KDDTrain%2B.txt\n",
     "# Load the NSL-KDD dataset\n",
     "# Replace 'KDDTrain+.txt' and 'KDDTest+.txt' with the correct paths to your dataset\n",
-    "columns = [\n",
-    "    \"duration\",\"protocol_type\", \"service\", \"flag\", \"src_bytes\", \"dst_bytes\",\n",
-    "    \"land\", \"wrong_fragment\", \"urgent\", \"hot\", \"num_failed_logins\",\n",
-    "    \"logged_in\", \"num_compromised\", \"root_shell\", \"su_attempted\", \"num_root\",\n",
-    "    \"num_file_creations\", \"num_shells\", \"num_access_files\", \"num_outbound_cmds\",\n",
-    "    \"is_host_login\", \"is_guest_login\", \"count\", \"srv_count\",\n",
-    "    \"serror_rate\", \"srv_serror_rate\", \"rerror_rate\", \"srv_rerror_rate\",\n",
-    "    \"same_srv_rate\", \"diff_srv_rate\", \"srv_diff_host_rate\",\n",
-    "    \"dst_host_count\", \"dst_host_srv_count\", \"dst_host_same_srv_rate\",\n",
-    "    \"dst_host_diff_srv_rate\", \"dst_host_same_src_port_rate\",\n",
-    "    \"dst_host_srv_diff_host_rate\", \"dst_host_serror_rate\",\n",
-    "    \"dst_host_srv_serror_rate\", \"dst_host_rerror_rate\",\n",
-    "    \"dst_host_srv_rerror_rate\", \"label\"\n",
-    "]\n",
     "\n",
     "train_data = pd.read_csv(\"./data/nsl-kdd-dataset/KDDTrain+.txt\", header=None, names=columns, index_col=False)\n",
     "test_data = pd.read_csv(\"./data/nsl-kdd-dataset/KDDTest+.txt\", header=None, names=columns, index_col=False)\n",
