--- a/anomaly-detection-cyber-security.ipynb
+++ b/anomaly-detection-cyber-security.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NSL-KDD Dataset\n",
+    "# NSL-KDD Dataset\n",
     "\n",
     "Downloaded from https://github.com/jmnwong/NSL-KDD-Dataset/blob/master/KDDTrain%2B.txt\n",
     "\n",
@@ -16,7 +16,50 @@
     "- **U2R (User to Root):** Attacks where the attacker tries to escalate privileges on a system (e.g., Buffer_overflow, Loadmodule).\n",
     "- **Normal:** Legitimate network activity with no malicious behavior.\n",
     "\n",
-    "These categories represent the types of attacks in the dataset used for intrusion detection research."
+    "These categories represent the types of attacks in the dataset used for intrusion detection research.\n",
+    "\n",
+    "## NSL-KDD Dataset Attack Types and Subtypes\n",
+    "\n",
+    "### 1. **DoS (Denial of Service)**:\n",
+    "DoS attacks aim to make a network service or system unavailable by overwhelming it with traffic or resource consumption. The goal is to disrupt normal operations or render services inaccessible.\n",
+    "\n",
+    "- **Smurf**: An attack where the attacker sends a large number of ICMP Echo requests (ping requests) with the target's address as the source, causing a flood of responses and overwhelming the target.\n",
+    "- **Neptune**: A TCP SYN flood attack, where an attacker sends a large number of SYN requests to a target's system, but doesn't complete the handshake, causing the system to be overwhelmed with half-open connections.\n",
+    "- **Back**: Similar to Neptune but specifically targeting the backend services, flooding them with SYN packets.\n",
+    "- **Land**: The attacker sends a spoofed packet where the source and destination IP addresses are the same, causing the target system to get stuck in a loop trying to process it.\n",
+    "- **Pod**: An attack where the attacker sends malicious packets that confuse the victim's operating system by exploiting certain bugs in network protocol handling.\n",
+    "- **Teardrop**: A form of DoS attack where fragmented packets are sent with overlapping, corrupted data that the target system can't process, often causing a crash.\n",
+    "- **Satan**: A network scanner that discovers vulnerabilities in a target system, though its primary purpose isn't necessarily disruption, it can lead to DoS if exploited.\n",
+    "\n",
+    "### 2. **Probe**:\n",
+    "Probe attacks are used for gathering information about a target system or network. They are typically the first step in more sophisticated attacks and aim to identify weaknesses in systems.\n",
+    "\n",
+    "- **Nmap**: A network exploration tool used for discovering hosts and services on a computer network. It is commonly used in reconnaissance stages of attacks.\n",
+    "- **Portsweep**: An attack where the attacker sweeps through a range of ports on one or more target systems to find open ports.\n",
+    "- **Ipsweep**: Similar to Portsweep, but in this case, the attacker scans an entire network for live hosts.\n",
+    "- **Mscan**: A scanning tool that identifies which systems are reachable and their vulnerabilities.\n",
+    "- **Saint**: Another reconnaissance tool used for scanning networks for potential vulnerabilities, sometimes leading to exploitation.\n",
+    "\n",
+    "### 3. **R2L (Remote to Local)**:\n",
+    "R2L attacks involve attackers attempting to gain unauthorized access to a target system from a remote location. These attacks usually involve exploiting weak authentication or vulnerabilities to infiltrate a system.\n",
+    "\n",
+    "- **Guess_passwd**: The attacker tries to guess the password of a remote system by attempting various combinations (password guessing attack).\n",
+    "- **Ftp_write**: An attack where the attacker gains access to a target system’s FTP server with the goal of writing files, often to gain more control over the system.\n",
+    "- **Imap**: Exploiting vulnerabilities in the IMAP (Internet Message Access Protocol) service to gain unauthorized access to email accounts.\n",
+    "- **Phf**: A vulnerability in the **HTTP** service where attackers exploit misconfigured CGI scripts to run arbitrary commands on the server.\n",
+    "- **Warezclient**: A client-side attack where the attacker attempts to retrieve illegal copies of software (warez) via FTP.\n",
+    "- **Warezmaster**: The attacker attempts to upload and share illegal copies of software, often through FTP or other file-sharing methods.\n",
+    "\n",
+    "### 4. **U2R (User to Root)**:\n",
+    "U2R attacks involve attackers trying to escalate their privileges from a regular user to a superuser or root. These attacks often target vulnerabilities in operating systems or applications to gain elevated privileges.\n",
+    "\n",
+    "- **Buffer_overflow**: The attacker exploits a vulnerability in a program that allows them to overflow a buffer, leading to the execution of arbitrary code, often allowing for privilege escalation.\n",
+    "- **Loadmodule**: An attack where the attacker tries to load malicious code into the kernel, often to gain elevated privileges.\n",
+    "- **Xterm**: Exploiting the X Window system (used in Unix-based systems) to gain unauthorized access and escalate privileges.\n",
+    "- **Fuzzer**: A type of attack where the attacker sends malformed or unexpected input to an application to trigger vulnerabilities, often leading to privilege escalation.\n",
+    "\n",
+    "### 5. **Normal**:\n",
+    "These are the instances where network traffic is legitimate, with no signs of malicious intent. They represent **normal behavior** in the dataset and are used as a benchmark for comparing the behavior of attacks.\n"
    ]
   },
   {
