new comments for top features

--- a/anomaly-detection-cyber-security.ipynb
+++ b/anomaly-detection-cyber-security.ipynb
@@ -642,6 +642,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explanations of top 10 Features Based on ANOVA F-value in NSL KDD Dataset\n",
+    "\n",
+    "1. **same_srv_rate**  \n",
+    "The rate of connections that are to the same service (protocol + service). This feature indicates how frequently the same service is accessed in the dataset. A high value may suggest that a particular service is being targeted by an attack.\n",
+    "\n",
+    "2. **dst_host_srv_count**  \n",
+    "The count of connections to the same service on the destination host. This feature is a measure of how often a specific service is accessed on the destination system. High values can be indicative of scanning or probing behavior.\n",
+    "\n",
+    "3. **dst_host_same_srv_rate**  \n",
+    "The rate of connections that are to the same service on the destination host. This feature captures how consistently the same service is being targeted on a particular destination host, which could signal a denial of service or probing activity.\n",
+    "\n",
+    "4. **logged_in**  \n",
+    "A binary feature indicating whether a user has logged into the system. A value of 1 means the user has successfully logged in, and 0 means the user has not. This feature is important for identifying unauthorized access attempts or successful logins during an attack.\n",
+    "\n",
+    "5. **flag**  \n",
+    "The status flag of the connection (e.g., SF, REJ, RSTO, etc.). It is used to indicate the type of connection, such as whether it was successful or rejected. This feature helps classify traffic behavior and could indicate specific types of attacks, such as resetting connections or denial of service.\n",
+    "\n",
+    "6. **dst_host_srv_serror_rate**  \n",
+    "The rate of connections to the same service on the destination host that resulted in a \"serror\" (server-side error). High values of this feature can indicate a service that is being targeted and possibly overwhelmed by malicious traffic.\n",
+    "\n",
+    "7. **dst_host_serror_rate**  \n",
+    "The rate of server-side errors for the destination host. This feature is indicative of how often errors are encountered on the server. A high rate of errors can point to attack scenarios where a service or host is being repeatedly hit with invalid or malicious requests.\n",
+    "\n",
+    "8. **serror_rate**  \n",
+    "The rate of connections that result in server-side errors. This feature indicates how often connections fail due to server errors. High values may point to denial of service or brute-force attacks.\n",
+    "\n",
+    "9. **srv_serror_rate**  \n",
+    "The rate of server-side errors in connections that target the same service. A high value of this feature can suggest that an attacker is exploiting a vulnerability in a service, or the service is being overwhelmed by malformed requests.\n",
+    "\n",
+    "10. **count**  \n",
+    "The number of connections to the same host. This feature is important for detecting patterns of connections over time. High values could indicate a DDoS (Distributed Denial of Service) attack or scanning activity targeting the same host.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1806658245.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[148], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    1. **same_srv_rate**\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 144,
    "metadata": {},
