--- a/anomaly-detection-cyber-security.ipynb
+++ b/anomaly-detection-cyber-security.ipynb
@@ -1021,6 +1021,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logged_in            0      1\n",
+      "attack_type                  \n",
+      "apache2            246    491\n",
+      "back                 0   1315\n",
+      "buffer_overflow      2     48\n",
+      "ftp_write            3      8\n",
+      "guess_passwd       522    762\n",
+      "httptunnel         131      2\n",
+      "imap                11      1\n",
+      "ipsweep           3715     25\n",
+      "land                25      0\n",
+      "loadmodule           1     10\n",
+      "mailbomb             0    293\n",
+      "mscan              865    131\n",
+      "multihop            15     10\n",
+      "named               15      2\n",
+      "neptune          45870      1\n",
+      "nmap              1566      0\n",
+      "normal           21847  55207\n",
+      "perl                 0      5\n",
+      "phf                  1      5\n",
+      "pod                242      0\n",
+      "portsweep         3084      4\n",
+      "processtable       685      0\n",
+      "ps                   4     11\n",
+      "rootkit             11     12\n",
+      "saint              318      1\n",
+      "satan             4311     57\n",
+      "sendmail             5      9\n",
+      "smurf             3311      0\n",
+      "snmpgetattack      178      0\n",
+      "snmpguess          331      0\n",
+      "spy                  1      1\n",
+      "sqlattack            0      2\n",
+      "teardrop           904      0\n",
+      "udpstorm             2      0\n",
+      "warezclient          0    890\n",
+      "warezmaster        462    502\n",
+      "worm                 0      2\n",
+      "xlock                7      2\n",
+      "xsnoop               2      2\n",
+      "xterm                3     10\n",
+      "------------------------------------------------------------ \n",
+      "\n",
+      "flag             OTH   REJ  RSTO  RSTOS0  RSTR     S0   S1   S2   S3     SF  \\\n",
+      "attack_type                                                                   \n",
+      "apache2            0     0     0       0   482    246    0    0    5      4   \n",
+      "back               0     0     0       0   140      0    3    7    0   1165   \n",
+      "buffer_overflow    0     0     1       0     0      0    0    0    0     49   \n",
+      "ftp_write          0     0     0       0     0      0    0    0    0     11   \n",
+      "guess_passwd       0     0    70       0     6      0    0    0    6   1202   \n",
+      "httptunnel         0   109     0       0     2      0    0    0    0     22   \n",
+      "imap               0     0     1       0     0      0    1    0    0      6   \n",
+      "ipsweep            0   396    30       0     0      0    0    0    0   3314   \n",
+      "land               0     0     0       0     0     25    0    0    0      0   \n",
+      "loadmodule         0     0     0       0     0      0    0    0    0     11   \n",
+      "mailbomb           0     0     0       0     0      0    0    0    0    293   \n",
+      "mscan              0   332   363       0     0    166    4    0    0    131   \n",
+      "multihop           0     0     0       0     0      0    0    0    0     25   \n",
+      "named              0     2     2       0     0      0    0    0    0     13   \n",
+      "neptune            0  8432  1590       0     0  35848    0    0    0      1   \n",
+      "nmap               0     0     0       0     0      0    0    0    0   1228   \n",
+      "normal            11  2727   221       1   190    354  372  127   49  73000   \n",
+      "perl               0     0     0       0     0      0    0    0    0      5   \n",
+      "phf                0     1     0       0     0      0    0    0    0      5   \n",
+      "pod                0     0     0       0     0      0    0    0    0    242   \n",
+      "portsweep         39   569    50     103  2266     54    0    0    0      7   \n",
+      "processtable       0     0     0       0     2      0    0    4  236    443   \n",
+      "ps                 0     0     0       0     0      0    0    0    0     15   \n",
+      "rootkit            0     0     0       0     0      0    0    0    0     23   \n",
+      "saint              0   175     0       0     0     19    0    1    0    124   \n",
+      "satan              0  2340     6       1     1    152    1    2    1   1864   \n",
+      "sendmail           0     0     0       0     0      0    0    0    0     14   \n",
+      "smurf              0     0     0       0     0      0    0    0    0   3311   \n",
+      "snmpgetattack      0     0     0       0     0      0    0    0    0    178   \n",
+      "snmpguess          0     0     0       0     0      0    0    0    0    331   \n",
+      "spy                0     0     0       0     0      0    0    0    0      2   \n",
+      "sqlattack          0     0     0       0     0      0    0    0    0      2   \n",
+      "teardrop           0     0     0       0     0      0    0    0    0    904   \n",
+      "udpstorm           0     0     0       0     0      0    0    0    0      2   \n",
+      "warezclient        0     0     1       0     1      0    0    1    1    886   \n",
+      "warezmaster        0     0     0       0     0      0    4    0    0    960   \n",
+      "worm               0     0     0       0     0      0    0    0    0      2   \n",
+      "xlock              0     0     0       0     0      0    0    0    0      9   \n",
+      "xsnoop             0     0     0       0     0      0    1    0    0      3   \n",
+      "xterm              0     0     0       0     0      0    0    0    0     13   \n",
+      "\n",
+      "flag              SH  \n",
+      "attack_type           \n",
+      "apache2            0  \n",
+      "back               0  \n",
+      "buffer_overflow    0  \n",
+      "ftp_write          0  \n",
+      "guess_passwd       0  \n",
+      "httptunnel         0  \n",
+      "imap               4  \n",
+      "ipsweep            0  \n",
+      "land               0  \n",
+      "loadmodule         0  \n",
+      "mailbomb           0  \n",
+      "mscan              0  \n",
+      "multihop           0  \n",
+      "named              0  \n",
+      "neptune            0  \n",
+      "nmap             338  \n",
+      "normal             2  \n",
+      "perl               0  \n",
+      "phf                0  \n",
+      "pod                0  \n",
+      "portsweep          0  \n",
+      "processtable       0  \n",
+      "ps                 0  \n",
+      "rootkit            0  \n",
+      "saint              0  \n",
+      "satan              0  \n",
+      "sendmail           0  \n",
+      "smurf              0  \n",
+      "snmpgetattack      0  \n",
+      "snmpguess          0  \n",
+      "spy                0  \n",
+      "sqlattack          0  \n",
+      "teardrop           0  \n",
+      "udpstorm           0  \n",
+      "warezclient        0  \n",
+      "warezmaster        0  \n",
+      "worm               0  \n",
+      "xlock              0  \n",
+      "xsnoop             0  \n",
+      "xterm              0  \n",
+      "------------------------------------------------------------ \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for each attack type, show distribution of categorical features\n",
+    "# make it a matrix and show like a table\n",
+    "# Create tables for each categorical feature\n",
+    "for feature in categorical_featues:\n",
+    "    # Create a cross-tabulation\n",
+    "    cross_tab = pd.crosstab(full_data['attack_type'], full_data[feature])\n",
+    "    \n",
+    "    print(cross_tab)\n",
+    "    print('-'*60, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 144,
    "metadata": {},
    "outputs": [
