--- a/anomaly-detection-cyber-security.ipynb
+++ b/anomaly-detection-cyber-security.ipynb
@@ -1928,6 +1928,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBoost modeling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
